[metadata]
name = twtr_for_dataframes
version = 1.0.2
author = Roshan Jamthe
author_email = jamthe_193606@student.nitw.ac.in
description = twtr completely processes text data of the DataFrame.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RoshanJamthe/twtr_package
project_urls =
    Bug Tracker = https://github.com/RoshanJamthe/twtr_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src